--- a/index.html
+++ b/index.html
@@ -3,148 +3,165 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>저희 결혼합니다</title>
+    <title>이승환 ❤️ 조수경</title>
+    
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
     <style>
         :root {
-            --bg-color: #ffffff;
-            --point-color: #bca08a; /* 고급스러운 골드/베이지 톤 */
-            --text-main: #333333;
+            /* 메이크디어 스타일의 부드러운 배경색 정의 */
+            --bg-white: #ffffff;
+            --bg-beige: #faf8f5; /* 연한 베이지 */
+            --point-color: #bca08a;
+            --text-main: #444444;
             --text-sub: #888888;
         }
 
         body {
             margin: 0; padding: 0;
-            background-color: #f2f2f2;
+            background-color: #e9e9e9; /* 외부 여백 배경 */
             font-family: 'Noto Sans KR', sans-serif;
             color: var(--text-main);
+            line-height: 1.8;
             word-break: keep-all;
         }
 
         .wrapper {
             max-width: 480px;
             margin: 0 auto;
-            background-color: var(--bg-color);
-            box-shadow: 0 0 20px rgba(0,0,0,0.05);
+            background-color: var(--bg-white);
+            overflow-x: hidden; /* 애니메이션 시 가로 스크롤 방지 */
         }
+
+        /* [섹션별 배경색 지정] */
+        section { padding: 100px 24px; text-align: center; }
+        .bg-beige { background-color: var(--bg-beige); }
 
         /* 1. 메인 섹션 */
         .main-section {
             position: relative;
             width: 100%;
-            height: 100vh; /* 화면 꽉 차게 */
+            height: 100vh;
             overflow: hidden;
-            text-align: center;
         }
         .main-img {
             width: 100%; height: 100%;
             object-fit: cover;
-            filter: brightness(0.9);
         }
         .main-text {
             position: absolute;
-            bottom: 10%; left: 0; right: 0;
+            bottom: 12%; left: 0; right: 0;
             color: white;
-            text-shadow: 0 2px 10px rgba(0,0,0,0.3);
+            text-shadow: 0 2px 8px rgba(0,0,0,0.4);
         }
-        .main-text h1 { font-family: 'Gowun Batang', serif; font-size: 1.8rem; margin: 0; }
-        .main-text p { font-size: 1rem; margin-top: 10px; opacity: 0.9; }
+        .main-text h1 { font-family: 'Gowun Batang', serif; font-size: 1.8rem; margin: 0; font-weight: 400; }
 
-        /* 공통 섹션 스타일 */
-        section { padding: 80px 20px; text-align: center; }
+        /* 2. 초대글 스타일 */
         .section-title {
             font-family: 'Gowun Batang', serif;
             color: var(--point-color);
-            font-size: 0.9rem;
-            letter-spacing: 3px;
-            margin-bottom: 30px;
+            font-size: 0.85rem;
+            letter-spacing: 4px;
+            margin-bottom: 40px;
         }
+        .greeting-content { font-size: 0.95rem; font-weight: 300; }
 
-        /* 2. 초대글 */
-        .greeting-text { line-height: 2.2; font-size: 0.95rem; font-weight: 300; }
-
-        /* 3. 계좌번호 아코디언 */
+        /* 3. 계좌번호 (아코디언 느낌) */
         .account-box {
-            background: #fdfaf7;
-            padding: 20px;
-            border-radius: 10px;
-            margin-top: 20px;
+            background: white;
+            padding: 25px;
+            border: 1px solid #eee;
+            border-radius: 8px;
+            margin-top: 30px;
         }
-        .account-btn {
-            background: var(--point-color);
-            color: white;
+        .btn-copy {
+            background: #f4f4f4;
             border: none;
-            padding: 12px 25px;
-            border-radius: 5px;
+            padding: 10px 15px;
+            border-radius: 4px;
+            font-size: 0.8rem;
+            margin-top: 10px;
             cursor: pointer;
-            width: 100%;
-            margin: 5px 0;
-            font-size: 0.9rem;
         }
 
-        /* 4. 하단 참석 버튼 (고정) */
-        .rsvp-btn {
+        /* 고정 버튼 */
+        .rsvp-float {
             position: fixed;
-            bottom: 20px;
+            bottom: 25px;
             left: 50%;
             transform: translateX(-50%);
-            width: 90%;
-            max-width: 400px;
-            background: rgba(188, 160, 138, 0.95);
+            width: 85%;
+            max-width: 380px;
+            background: var(--point-color);
             color: white;
-            padding: 15px;
-            border-radius: 30px;
+            text-align: center;
+            padding: 16px;
+            border-radius: 50px;
             text-decoration: none;
             font-weight: bold;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-            z-index: 100;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+            z-index: 1000;
         }
     </style>
 </head>
 <body>
 
 <div class="wrapper">
-    <div class="main-section">
-        <img src="https://images.unsplash.com/photo-1511795409834-ef04bbd61622?auto=format&fit=crop&w=800&q=80" class="main-img">
-        <div class="main-text">
-            <h1>성훈 & 채연</h1>
+    <div class="main-section" data-aos="fade-in" data-aos-duration="2000">
+        <img src="https://images.unsplash.com/photo-1519741497674-611481863552?auto=format&fit=crop&w=800&q=80" class="main-img">
+        <div class="main-text" data-aos="fade-up" data-aos-delay="500">
+            <h1>이성훈 & 김채연</h1>
             <p>2026. 05. 23. SAT PM 12:00</p>
         </div>
     </div>
 
-    <section>
-        <div class="section-title">INVITATION</div>
-        <div class="greeting-text">
+    <section class="bg-beige">
+        <div class="section-title" data-aos="fade-up">INVITATION</div>
+        <div class="greeting-content" data-aos="fade-up" data-aos-delay="300">
             서로가 마주 보며 다진 약속을<br>
-            함께 걸어가는 믿음으로 지켜가겠습니다.<br>
+            함께 걸어가는 믿음으로 지켜가겠습니다.<br><br>
             저희의 새로운 시작을 축복해 주세요.
         </div>
     </section>
 
-    <section style="background-color: #fafafa;">
-        <div class="section-title">FOR YOUR HEART</div>
-        <p style="font-size: 0.85rem; color: #888;">축복의 마음을 전하실 곳</p>
-        <div class="account-box">
-            <button class="account-btn" onclick="alert('계좌번호가 복사되었습니다 (샘플)')">신랑측 마음 전하기</button>
-            <button class="account-btn" onclick="alert('계좌번호가 복사되었습니다 (샘플)')">신부측 마음 전하기</button>
+    <section>
+        <div data-aos="zoom-in" data-aos-duration="1000">
+            <img src="https://images.unsplash.com/photo-1583939003579-730e3918a45a?auto=format&fit=crop&w=600" style="width:100%; border-radius: 4px;">
+        </div>
+    </section>
+
+    <section class="bg-beige">
+        <div class="section-title" data-aos="fade-up">FOR YOUR HEART</div>
+        <div class="account-box" data-aos="flip-left">
+            <p>신랑측 마음 전하실 곳</p>
+            <button class="btn-copy">계좌번호 복사하기</button>
+        </div>
+        <div class="account-box" data-aos="flip-left" data-aos-delay="200">
+            <p>신부측 마음 전하실 곳</p>
+            <button class="btn-copy">계좌번호 복사하기</button>
         </div>
     </section>
 
     <section>
-        <div class="section-title">LOCATION</div>
-        <p><strong>아름다운 웨딩홀 1층</strong></p>
-        <p style="color: #888; font-size: 0.9rem;">서울 강남구 어느도로 123</p>
-        <div id="map" style="width:100%; height:250px; background:#eee; margin-top:20px; line-height:250px;">
-            (여기에 지도가 들어갑니다)
+        <div class="section-title" data-aos="fade-up">LOCATION</div>
+        <div id="map" style="width:100%; height:300px; background:#f0f0f0; border-radius:10px;" data-aos="fade-up">
+            <p style="padding-top:130px; color:#999;">여기에 지도가 들어옵니다</p>
         </div>
     </section>
 
-    <div style="height: 100px;"></div> </div>
+    <div style="height: 120px;"></div>
+</div>
 
-<a href="https://forms.gle/본인의구글폼주소" class="rsvp-btn" target="_blank">
-    신랑 & 신부에게 참석 의사 전달하기
-</a>
+<a href="#" class="rsvp-float">참석 의사 전달하기</a>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init({
+        duration: 1000, // 애니메이션 지속 시간 (1초)
+        once: true // 스크롤 올릴 때 다시 작동할지 여부 (한 번만 작동)
+    });
+</script>
 
 </body>
 </html>
