--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
     <div class="main-section" data-aos="fade-in" data-aos-duration="2000">
         <img src="https://images.unsplash.com/photo-1519741497674-611481863552?auto=format&fit=crop&w=800&q=80" class="main-img">
         <div class="main-text" data-aos="fade-up" data-aos-delay="500">
-            <h1>이성훈 & 김채연</h1>
-            <p>2026. 05. 23. SAT PM 12:00</p>
+            <h1>이승환 & 조수경</h1>
+            <p>2026. 04. 18. SAT PM 12:00</p>
         </div>
     </div>
 
