--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이성훈 ❤️ 김채연 - 모바일 청첩장</title>
+    <title>이승환 ❤️ 조수경</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -63,8 +63,8 @@
         <canvas id="snow-canvas"></canvas>
         <img src="https://images.unsplash.com/photo-1519741497674-611481863552?auto=format&fit=crop&w=800&q=80" class="main-img">
         <div class="main-title-box" data-aos="fade-up" data-aos-duration="1500">
-            <h1>이성훈 & 김채연</h1>
-            <p>2026. 05. 23. SAT PM 12:00</p>
+            <h1>이승환 & 조수경</h1>
+            <p>2026. 04. 18. SAT PM 12:00</p>
         </div>
     </div>
 
